手写spring-ioc处理beans.xml文件

--- a/tomato-framework-plugin/tomato-framework-plugin-ioc/pom.xml
+++ b/tomato-framework-plugin/tomato-framework-plugin-ioc/pom.xml
@@ -11,5 +11,13 @@
 
   <artifactId>tomato-framework-plugin-ioc</artifactId>
 
+  <dependencies>
+    <!-- DOM4J依赖 -->
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
+  </dependencies>
 
 </project>
